[tool.poetry]
name = "rl-project"
version = "0.1.0"
description = ""
authors = ["D. Debnath <d_debnath@outlook.com>"]
readme = "README.md"
packages = [{include = "rl_project"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
gym = "0.25.2"
torch = "^2.0.0"
tensorboard = "^2.13.0"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
